Edits of my own to group related links, copy together.

--- a/2025/2025-04-20-wir.md
+++ b/2025/2025-04-20-wir.md
@@ -1,19 +1,3 @@
-<!--
-
-For this version, I had NotebookLM and Copilot take a crack at rewriting the news summary items in the "Five Things" section that Leo/Llama 3.1 drafted earlier.
-
-Didn't really find 9 of the 10 NotebookLM results useful in this case tbh. But it did surface the LiveWire article on quantum computing that I've now added to the summaries.
-
-For the entire cohort of summary items, I found Copilot did a better rewrite job based on this prompt:
-
-Copilot, the attached markdown file is a draft of my weekly weekly newsletter about emerging technolgies. In the "Five Things" section are some news summary items I had another AI draft for me. Could you please edit them for clarity, spelling, grammar, flow, and, where possible based on your training data, factual accuracy? Each item should be 1-3 sentences in length.
-
-Copilot's revised summary items are copied below verbatim in the "Five Things" section. I've also preserved the Leo versions, commented out, for the sake of preserving the links better.
-
-Will manually edit myself from here in the next commit. - PM
-
- -->
-
 # Yes, this is a market crash. Duh.
 ## tktk <!-- Get AI help drafting subhead. -->
 
@@ -53,108 +37,42 @@ Will manually edit myself from here in the next commit. - PM
 
 The week's most important headlines in emerging tech:
 
-- **Elon Musk's Expanding Family Plans**: Elon Musk, already a father to at least 14 children from four women, is reportedly seeking additional mothers to grow his family. Sources claim this aligns with his belief in the importance of population growth.
+- **AI made moves in the wrong direction on disinformation.** Researchers have uncovered a Russian disinformation network, dubbed "Pravda," that manipulates Western AI chatbots to disseminate pro-Kremlin propaganda. The study highlights vulnerabilities in leading AI systems. <!-- -->... OpenAI has revised its AI safety policy by removing pre-release testing requirements for certain high-risk capabilities. Critics worry this could lead to the irresponsible deployment of manipulative AI models. | *OpenAI to Develop Social Media Platform*: OpenAI is reportedly working on a social media platform that could rival Elon Musk's X, integrating a social feed with ChatGPT's image generation capabilities. This move comes amid an escalating legal and public relations war between OpenAI and Musk, who has accused OpenAI of abandoning its nonprofit roots. The project remains in early development, with OpenAI CEO Sam Altman soliciting feedback on the concept. ([Decrypt](https://decrypt.co/315020/openai-plans-x-like-social-platform-amid-ongoing-rift-musk)) | *OpenAI Policy Changes Spark Concerns*
+OpenAI has updated its AI safety policy, dropping pre-release testing requirements for persuasive or manipulative capabilities and considering the release of high-risk models. This decision has sparked concerns among experts, who fear it may lead to a "race to the bottom" in AI safety. The updated policy focuses on addressing risks through terms of service and user monitoring, rather than pre-deployment testing. ([Fortune](https://fortune.com/2025/04/16/openai-safety-framework-manipulation-deception-critical-risk/)) | Researchers have found that a Russian disinformation network, known as the Pravda network, is manipulating Western AI chatbots to spread pro-Kremlin propaganda. The study found that 10 leading AI chatbots repeated falsehoods from the Pravda network more than 33% of the time, advancing a pro-Moscow agenda. This "LLM grooming" tactic poses a threat to democratic discourse worldwide and could become more pervasive in the absence of oversight. ([AFP](https://www.france24.com/en/live-news/20250310-russian-disinformation-infects-ai-chatbots-researchers-warn))
 
-- **Russian Disinformation Targets Western AI**: Researchers have uncovered a Russian disinformation network, dubbed "Pravda," that manipulates Western AI chatbots to disseminate pro-Kremlin propaganda. The study highlights vulnerabilities in leading AI systems.
+- **Despite the washout in Big Tech shares, sentiment on AI and crypto remains bullish.**  Google search volumes for "Bitcoin" and "Ethereum" have surged to 2025 highs, reflecting growing public interest. Bitcoin searches reached a volume of 34, with Ethereum close behind. <!-- --> | *Public Companies Double Down on Bitcoin*: Major companies like MicroStrategy (now rebranded as Strategy), Tesla, and Coinbase continue to invest heavily in Bitcoin. Strategy alone holds over 150,000 BTC, maintaining its position as a leading corporate Bitcoin investor. *Google Search Volumes Increase for Bitcoin and Ethereum.* Google search volumes for "Bitcoin" and "Ethereum" have reached their highest levels in 2025, with Bitcoin's volume at 34 and Ethereum's at 19. This marks a significant increase in retail curiosity about these cryptocurrencies, particularly Bitcoin, which has seen a 26% month-over-month rise. The uptick in interest may be linked to the newly announced U.S. tariffs and rising geopolitical tension. ([The Block](https://www.theblock.co/post/351053/retail-curiosity-is-rekindled-as-google-search-volume-for-bitcoin-and-ethereum-jumps)) | *Tech Stocks Rebound Amid AI Hype* The tech startup ecosystem is experiencing a surge in valuations, particularly in AI-related companies, with some startups reaching valuations of $10 billion or more despite not having launched a product yet. This trend is driven by massive investments from venture capital firms and partnerships with major tech companies like Google, Microsoft, and Nvidia. The AI sector is seen as a "bright spot" amid pressure on mega-caps and volatility in the market. ([CNBC](https://www.youtube.com/watch?v=b8RFUvr_tks)) *Public Companies' Bitcoin Holdings* Several major public companies, including MicroStrategy (now rebranded as Strategy), Tesla, and Coinbase, have invested heavily in Bitcoin, with Strategy holding the largest portfolio at 531,644 BTC (worth over $45 billion). These companies have joined the growing list of institutional investors buying into Bitcoin, with Strategy's co-founder Michael Saylor being a key figure in promoting its adoption. This trend indicates a significant shift in the way public companies view Bitcoin as a store of value. ([Decrypt](https://decrypt.co/47061/public-companies-biggest-bitcoin-portfolios)) | The Q1 2025 crypto market analysis by CoinDesk Indices reveals a significant shift towards institutional-driven capital flows, with institutions favoring liquid and regulated large-cap assets. This shift has led to a widening gap between Bitcoin and the rest of the market, with Bitcoin's dominance reaching 62.2% in Q1. Altcoins, on the other hand, have underperformed, with some experiencing significant declines. ([CoinDesk](https://www.coindesk.com/coindesk-indices/2025/04/16/bitcoin-leads-a-fundamental-shift-in-the-crypto-market)) | Netflix has been a bright spot: https://www.wsj.com/business/media/now-streaming-on-netflix-a-show-where-profits-trump-the-trade-war-c8706476?st=KqW5wC&reflink=desktopwebshare_permalink
 
-- **OpenAI Sparks Controversy with Policy Updates**: OpenAI has revised its AI safety policy by removing pre-release testing requirements for certain high-risk capabilities. Critics worry this could lead to the irresponsible deployment of manipulative AI models.
+- **Ripple Launches Asia-Focused XRP Fund**: Ripple has partnered with HashKey Capital to launch the HashKey XRP Tracker Fund, allowing Asian investors to track XRP's performance. The fund is expected to expand institutional adoption of Ripple's cryptocurrency. <!-- --> | *Stellar Blockchain Targets Real-World Assets*: Stellar aims to hold $3 billion in real-world asset (RWA) value and facilitate $110 billion in RWA transaction volume by the end of 2025. The plan includes new partnerships and expanded use cases. <!-- --> | *Stellar Blockchain Expansion.* The Stellar blockchain aims to hold $3 billion in real-world asset (RWA) value and power $110 billion in RWA volume by the end of 2025. This goal is part of new partnerships with companies like Paxos, Ondo, Etherfuse, and SG Forge, which will help facilitate tokenization of existing financial assets. This expansion is a significant increase from the $290 million in RWA on the Stellar network at the end of December 2024. ([CoinDesk](https://www.coindesk.com/business/2025/04/17/stellar-sees-usd3b-of-real-world-assets-coming-on-chain-in-2025)) | *Ripple Partners with HashKey Capital*: Ripple has backed the launch of the HashKey XRP Tracker Fund, a new investment fund in Asia designed to track the performance of XRP. The fund will be available to professional investors and allows for cash or in-kind subscription and monthly redemption of shares. This collaboration is seen as a push into the Asian market for Ripple and its XRP cryptocurrency. ([The Block](https://www.theblock.co/post/351224/ripple-backs-new-xrp-tracker-fund-by-hashkey-capital-signaling-institutional-push-in-asia)) | Stablecoin giant Tether has invested $32 million in Bitcoin miner Bitdeer, despite the sector facing challenges. Bitcoin miners have collectively lost 25% of their value in March, with many companies struggling to recover their costs due to soaring mining difficulty. Tether's investment in Bitdeer is part of its growing interest in the Bitcoin mining space. ([Decrypt](https://decrypt.co/315305/tether-buys-bitcoin-miner-bitdeer-stock))
 
-- **Google Faces Antitrust Scrutiny**: A U.S. district judge has ruled that Google's dominance in ad exchanges and server markets violates the Sherman Antitrust Act. This decision underscores the company's alleged harm to advertisers and consumers.
+- **Exchanges:** Kraken, a crypto exchange giant, has laid off hundreds of staff members across all areas of the business over the past several months. This move is part of the company's efforts to streamline operations and improve its earnings before interest, tax, and amortization (EBITA) ahead of a potential public listing in the U.S. Despite the layoffs, Kraken claims its business is thriving and continues to launch new products and drive revenue growth. ([CoinDesk](https://www.coindesk.com/business/2025/04/17/kraken-sheds-hundreds-of-jobs-to-streamline-business-ahead-of-ipo-sources-say)) | *Coinbase Improves Solana Support* Coinbase has upgraded its infrastructure to better support the Solana ecosystem, addressing user complaints of withdrawal and depositing issues. The improvements include faster transaction processing times, improved liquidity, and better failsafes, resulting in a five-fold improvement in block processing throughput. This upgrade aims to meet the increasing demand for Solana transactions as the cryptocurrency scales in the future.([The Block](https://www.theblock.co/post/351197/coinbase-improves-solana-support-following-user-complaints-increases-transaction-throughput-five-fold))
 
-- **Public Companies Double Down on Bitcoin**: Major companies like MicroStrategy (now rebranded as Strategy), Tesla, and Coinbase continue to invest heavily in Bitcoin. Strategy alone holds over 150,000 BTC, maintaining its position as a leading corporate Bitcoin investor.
-
-- **DOJ Signals Shift in Crypto Enforcement**: A recent U.S. Justice Department memo indicates a shift away from aggressive crypto enforcement under the Biden administration. The memo suggests a more measured approach moving forward.
-
-- **Stellar Blockchain Targets Real-World Assets**: Stellar aims to hold $3 billion in real-world asset (RWA) value and facilitate $110 billion in RWA transaction volume by the end of 2025. The plan includes new partnerships and expanded use cases.
-
-- **Ripple Launches Asia-Focused XRP Fund**: Ripple has partnered with HashKey Capital to launch the HashKey XRP Tracker Fund, allowing Asian investors to track XRP's performance. The fund is expected to expand institutional adoption of Ripple's cryptocurrency.
-
-- **Bitcoin and Ethereum Gain Search Popularity**: Google search volumes for "Bitcoin" and "Ethereum" have surged to 2025 highs, reflecting growing public interest. Bitcoin searches reached a volume of 34, with Ethereum close behind.
-
-- **Quantum Computing Threatens Bitcoin Security**: Project 11 has offered an $85,000 bounty to test whether quantum computers can break Bitcoin's encryption. The challenge focuses on a simplified version of Bitcoin's cryptographic protocols.
-
-Let me know if you'd like further refinements or have additional sections you'd like me to review!
-
-
-
-<!-- Older drafts by Leo/Llama 3.1...
-
-- **Scientists Observe Elusive Quantum Phenomenon**
-Researchers have successfully observed a new quantum phase, called a superradiant phase transition (SRPT), which was first predicted over 50 years ago. This phenomenon, resulting from the coordinated fluctuation of two groups of quantum particles, could have significant implications for quantum computing, sensors, and communication technology. The discovery could lead to more stable and precise quantum measurements and computations. ([LiveScience](https://www.livescience.com/technology/computing/scientists-observe-new-quantum-phase-that-could-have-major-implications-for-quantum-computing))
-
-- **Elon Musk's Reproductive Plans** Elon Musk has a large family, with at least 14 children from four women, and is reportedly seeking to recruit more mothers to have his children. According to sources, Musk uses nondisclosure clauses and financial incentives to maintain secrecy and control over the mothers and their children. His motivations for having many children include concerns about a declining population and a desire to create a "legion" of intelligent humans to ensure the survival of humanity. ([Wall Street Journal](https://www.wsj.com/politics/elon-musk-children-mothers-ashley-st-clair-grimes-dc7ba05c?st=QFR3UL&reflink=desktopwebshare_permalink))
-
-- Researchers have found that a Russian disinformation network, known as the Pravda network, is manipulating Western AI chatbots to spread pro-Kremlin propaganda. The study found that 10 leading AI chatbots repeated falsehoods from the Pravda network more than 33% of the time, advancing a pro-Moscow agenda. This "LLM grooming" tactic poses a threat to democratic discourse worldwide and could become more pervasive in the absence of oversight. ([AFP](https://www.france24.com/en/live-news/20250310-russian-disinformation-infects-ai-chatbots-researchers-warn))
-
-- **OpenAI Policy Changes Spark Concerns**
-OpenAI has updated its AI safety policy, dropping pre-release testing requirements for persuasive or manipulative capabilities and considering the release of high-risk models. This decision has sparked concerns among experts, who fear it may lead to a "race to the bottom" in AI safety. The updated policy focuses on addressing risks through terms of service and user monitoring, rather than pre-deployment testing. ([Fortune](https://fortune.com/2025/04/16/openai-safety-framework-manipulation-deception-critical-risk/))
-
-- **Google Faces Antitrust Ruling**: A U.S. district judge ruled that Google's dominance in ad exchanges and server markets violates the Sherman Antitrust Act, harming advertisers and consumers. The company plans to appeal the decision. The ruling is part of a larger trend of antitrust cases against major tech companies, including Facebook and Amazon. ([Wall Street Journal](https://www.wsj.com/business/media/judge-rules-google-operates-illegal-ad-monopoly-1d955ed4?st=toZKpR&reflink=desktopwebshare_permalink))
-
-- **Public Companies' Bitcoin Holdings** Several major public companies, including MicroStrategy (now rebranded as Strategy), Tesla, and Coinbase, have invested heavily in Bitcoin, with Strategy holding the largest portfolio at 531,644 BTC (worth over $45 billion). These companies have joined the growing list of institutional investors buying into Bitcoin, with Strategy's co-founder Michael Saylor being a key figure in promoting its adoption. This trend indicates a significant shift in the way public companies view Bitcoin as a store of value. ([Decrypt](https://decrypt.co/47061/public-companies-biggest-bitcoin-portfolios))
-
-- **DOJ Memo Shifts Crypto Enforcement Approach.** A recent U.S. Justice Department memo signals a significant policy change, moving away from the Biden administration's more aggressive prosecutorial strategy and adopting a more favorable stance toward the crypto industry. The memo declares that the DOJ will focus on cases involving harm to investors or crypto-related crimes, rather than pursuing regulatory frameworks on digital assets. This shift could impact ongoing crypto cases and enforcement efforts, with some experts predicting a reduction in prosecutions. ([The Block](https://www.theblock.co/post/351111/sweeping-doj-memo-signals-turning-point-and-possible-relief-for-embattled-crypto-firms))
-
-- **Stellar Blockchain Expansion.** The Stellar blockchain aims to hold $3 billion in real-world asset (RWA) value and power $110 billion in RWA volume by the end of 2025. This goal is part of new partnerships with companies like Paxos, Ondo, Etherfuse, and SG Forge, which will help facilitate tokenization of existing financial assets. This expansion is a significant increase from the $290 million in RWA on the Stellar network at the end of December 2024. ([CoinDesk](https://www.coindesk.com/business/2025/04/17/stellar-sees-usd3b-of-real-world-assets-coming-on-chain-in-2025))
-
-- **Ripple Partners with HashKey Capital**: Ripple has backed the launch of the HashKey XRP Tracker Fund, a new investment fund in Asia designed to track the performance of XRP. The fund will be available to professional investors and allows for cash or in-kind subscription and monthly redemption of shares. This collaboration is seen as a push into the Asian market for Ripple and its XRP cryptocurrency. ([The Block](https://www.theblock.co/post/351224/ripple-backs-new-xrp-tracker-fund-by-hashkey-capital-signaling-institutional-push-in-asia))
-
-- **Google Search Volumes Increase for Bitcoin and Ethereum.** Google search volumes for "Bitcoin" and "Ethereum" have reached their highest levels in 2025, with Bitcoin's volume at 34 and Ethereum's at 19. This marks a significant increase in retail curiosity about these cryptocurrencies, particularly Bitcoin, which has seen a 26% month-over-month rise. The uptick in interest may be linked to the newly announced U.S. tariffs and rising geopolitical tension. ([The Block](https://www.theblock.co/post/351053/retail-curiosity-is-rekindled-as-google-search-volume-for-bitcoin-and-ethereum-jumps))
-
-- **Quantum Computing Threat to Bitcoin.** A $85,000 bounty has been offered by Project 11 to test if quantum computers can break Bitcoin's encryption. The challenge focuses on a simplified version of Bitcoin's elliptic curve cryptography, and experts warn that a quantum computer could potentially crack the encryption, allowing hackers to steal funds. This highlights the need for Bitcoin developers to prepare for a quantum future and develop new, quantum-resistant solutions to protect user funds. ([Decrypt](https://decrypt.co/315288/bitcoin-quantum-computing-bounty-encryption))
-
-- **Kraken Layoffs.** Kraken, a crypto exchange giant, has laid off hundreds of staff members across all areas of the business over the past several months. This move is part of the company's efforts to streamline operations and improve its earnings before interest, tax, and amortization (EBITA) ahead of a potential public listing in the U.S. Despite the layoffs, Kraken claims its business is thriving and continues to launch new products and drive revenue growth. ([CoinDesk](https://www.coindesk.com/business/2025/04/17/kraken-sheds-hundreds-of-jobs-to-streamline-business-ahead-of-ipo-sources-say))
-
-- **Martial Law Concerns:** President Donald Trump is approaching a deadline to report on whether to invoke the Insurrection Act and declare martial law. Trump has taken actions to subvert the military to meet this end, including installing a combative defense secretary and replacing the Joint Chiefs of Staff chairman. The article explores a hypothetical scenario where Trump declares martial law, leading to a chain of events that could result in the military arresting the president and suspending civil government. ([San Francisco Chronicle](https://www.sfchronicle.com/opinion/openforum/article/trump-insurrection-act-april-20-20269810.php))
-
-- **Coinbase Improves Solana Support** Coinbase has upgraded its infrastructure to better support the Solana ecosystem, addressing user complaints of withdrawal and depositing issues. The improvements include faster transaction processing times, improved liquidity, and better failsafes, resulting in a five-fold improvement in block processing throughput. This upgrade aims to meet the increasing demand for Solana transactions as the cryptocurrency scales in the future.([The Block](https://www.theblock.co/post/351197/coinbase-improves-solana-support-following-user-complaints-increases-transaction-throughput-five-fold))
-
-- **Bitcoin Mining Companies Struggle Amid Market Slump.** Stablecoin giant Tether has invested $32 million in Bitcoin miner Bitdeer, despite the sector facing challenges. Bitcoin miners have collectively lost 25% of their value in March, with many companies struggling to recover their costs due to soaring mining difficulty. Tether's investment in Bitdeer is part of its growing interest in the Bitcoin mining space. ([Decrypt](https://decrypt.co/315305/tether-buys-bitcoin-miner-bitdeer-stock))
-
-- **Arizona Advances Crypto Reserve Legislation.** Arizona's Strategic Digital Assets Reserve Bill (SB 1373) has passed the House committee, awaiting a full floor vote before reaching the governor's desk. The bill proposes creating a digital assets reserve fund, which would be filled with seized crypto and state appropriations. If enacted, it would be the first state to establish a digital assets reserve. ([The Block](https://www.theblock.co/post/351240/arizona-leads-crypto-reserve-legislation-race-as-sb-1373-passes-house-committee))
-
-- The Q1 2025 crypto market analysis by CoinDesk Indices reveals a significant shift towards institutional-driven capital flows, with institutions favoring liquid and regulated large-cap assets. This shift has led to a widening gap between Bitcoin and the rest of the market, with Bitcoin's dominance reaching 62.2% in Q1. Altcoins, on the other hand, have underperformed, with some experiencing significant declines. ([CoinDesk](https://www.coindesk.com/coindesk-indices/2025/04/16/bitcoin-leads-a-fundamental-shift-in-the-crypto-market))
-
-- **US Secret Service Combats $4.3 Million Ethereum Scam** The US Secret Service, in collaboration with Canadian authorities, has identified and warned victims of a $4.3 million Ethereum "approval phishing" scam as part of "Operation Avalanche." The operation brought together regulators, law enforcement agencies, and crypto trading platforms to find compromised wallets on the Ethereum blockchain. This is the latest effort by the Secret Service to combat illicit activity in the crypto space.([The Block](https://www.theblock.co/post/351030/us-secret-service-combats-ethereum-scam-canadian-officials))
-
-- Auradine, a bitcoin miner manufacturer, has raised $153 million in a Series C funding round, led by StepStone Group, to expand its business into AI infrastructure. The company plans to use the fresh capital to grow its core bitcoin miner manufacturing business and its newly launched AI division, AuraLinks AI, which aims to develop breakthrough open data center networking solutions for the AI era. Auradine's total funding now exceeds $300 million. ([The Block](https://www.theblock.co/post/351003/bitcoin-miner-manufacturer-auradine-series-c-funding-ai-expansion))
-
-- **China's Local Governments Sell Seized Crypto Amid Trading Ban**
-Despite a ban on cryptocurrency trading in mainland China, local governments have been selling confiscated crypto assets to replenish public coffers. This practice, which involves private companies helping to dispose of seized assets, has raised concerns about opaque processes and potential corruption. According to Reuters, one company has facilitated the sale of over 3 billion yuan worth of cryptocurrencies in offshore markets since 2018. ([The Block](https://www.theblock.co/post/350955/china-government-selling-seized-crypto))
-
-- **Oklahoma's bid to establish a state Bitcoin** reserve has fallen short, but the effort has reignited interest in other states, with New Hampshire, Texas, and Arizona now at the forefront of the push for state-level BTC reserves. New Hampshire's House has already passed a bill to invest in Bitcoin and precious metals, while Florida's House Insurance and Banking Committee has unanimously approved a similar measure. The momentum continues to build as more states consider joining the effort. ([Decrypt](https://decrypt.co/315026/oklahoma-kills-bitcoin-reserve-proposal-in-senate-committee-vote))
-
-- **Bitcoin Price Stabilizes Amid Trade War Concerns**
-The price of Bitcoin initially dropped after the White House announced increased tariffs on Chinese goods, but later recovered to trade flat. Coinbase analysts warn of a potential "crypto winter" due to the ongoing trade war and decreased investor confidence. Bitcoin's price is currently above its 200-day moving average, but has shown volatility in recent weeks. ([Decrypt](https://decrypt.co/315089/bitcoin-steadies-but-coinbase-analyst-sees-crypto-winter-tariffs))
-
-- **Coinbase Urges Australia to Support Crypto Reform**
-Coinbase is calling on Australian voters to support crypto reform in the upcoming May 3 federal election, warning that the lack of regulation is driving talent and capital offshore. The company has outlined five urgent steps for the next government to take, including launching a crypto taskforce and enabling stablecoin use. If implemented, this could help Australia regain its edge in Web3 innovation and support the growth of the crypto industry. ([Decrypt](https://decrypt.co/315022/coinbase-urges-australia-vote-crypto-progress-may))
-
-- **OpenAI to Develop Social Media Platform**: OpenAI is reportedly working on a social media platform that could rival Elon Musk's X, integrating a social feed with ChatGPT's image generation capabilities. This move comes amid an escalating legal and public relations war between OpenAI and Musk, who has accused OpenAI of abandoning its nonprofit roots. The project remains in early development, with OpenAI CEO Sam Altman soliciting feedback on the concept. ([Decrypt](https://decrypt.co/315020/openai-plans-x-like-social-platform-amid-ongoing-rift-musk))
-
-- **Meta Platforms**, the owner of Facebook, Instagram, and WhatsApp, is facing an antitrust trial with the Federal Trade Commission (FTC). The FTC alleges that Meta has monopolized the social media market and should be broken up, with the company's acquisition of Instagram and WhatsApp being a key point of contention. The trial, which is expected to last eight weeks, could shape the future of antitrust enforcement and have significant implications for the tech industry. ([Wall Street Journal](https://www.wsj.com/tech/meta-fights-to-keep-instagram-and-whatsapp-as-antitrust-trial-begins-8c6911d9?st=CzM5F5&reflink=desktopwebshare_permalink))
-
-- **US Government's Crypto Holdings** The Trump administration is exploring ways to increase the US government's Bitcoin holdings, including using funds from revalued gold certificates and import tariffs. According to Bo Hines, Executive Director of the President's Council of Advisers on Digital Assets, the administration aims to maximize every legal and fiscal lever to expand the country's crypto holdings. This move could be supported by the reintroduced Bitcoin Act of 2025. ([Cryptopolitan](https://www.msn.com/en-us/politics/government/trump-to-use-tariff-revenue-to-buy-more-bitcoin/ar-AA1CWdHZ))
-
-- **Trump Family's Crypto Ventures** The Trump family has invested in various crypto projects, including nonfungible tokens, decentralized finance, memecoins, ETFs, stablecoins, and Bitcoin mining. These ventures have generated significant paper gains, approaching $1 billion, despite market fluctuations. The family's involvement in crypto has raised concerns about potential conflicts of interest given the administration's influence over regulations. ([Bloomberg](https://finance.yahoo.com/news/trump-family-going-crypto-projects-140000972.html))
-
-- **Tech Stocks Rebound Amid AI Hype** The tech startup ecosystem is experiencing a surge in valuations, particularly in AI-related companies, with some startups reaching valuations of $10 billion or more despite not having launched a product yet. This trend is driven by massive investments from venture capital firms and partnerships with major tech companies like Google, Microsoft, and Nvidia. The AI sector is seen as a "bright spot" amid pressure on mega-caps and volatility in the market. ([CNBC](https://www.youtube.com/watch?v=b8RFUvr_tks))
-
-- **Stablecoin Market Growth Predicted** A research report by Standard Chartered predicts that the stablecoin market could grow to $2 trillion by the end of 2028, driven by the expected passage of the Genius Act in the U.S. This legislation would further legitimize the stablecoin industry, potentially leading to a 10-fold increase in stablecoin supply. The increased demand for dollar-denominated stablecoin reserves could support U.S. dollar hegemony. ([CoinDesk](https://www.coindesk.com/markets/2025/04/15/stablecoin-market-could-grow-to-usd2t-by-end-2028-standard-chartered))
-
--->
+- **Quantum Computing Threat to Bitcoin.** A $85,000 bounty has been offered by Project 11 to test if quantum computers can break Bitcoin's encryption. The challenge focuses on a simplified version of Bitcoin's elliptic curve cryptography, and experts warn that a quantum computer could potentially crack the encryption, allowing hackers to steal funds. This highlights the need for Bitcoin developers to prepare for a quantum future and develop new, quantum-resistant solutions to protect user funds. ([Decrypt](https://decrypt.co/315288/bitcoin-quantum-computing-bounty-encryption)) | *Quantum Computing TKTK:* *Scientists Observe Elusive Quantum Phenomenon* Researchers have successfully observed a new quantum phase, called a superradiant phase transition (SRPT), which was first predicted over 50 years ago. This phenomenon, resulting from the coordinated fluctuation of two groups of quantum particles, could have significant implications for quantum computing, sensors, and communication technology. The discovery could lead to more stable and precise quantum measurements and computations. ([LiveScience](https://www.livescience.com/technology/computing/scientists-observe-new-quantum-phase-that-could-have-major-implications-for-quantum-computing)) | *Quantum Computing Threatens Bitcoin Security*: Project 11 has offered an $85,000 bounty to test whether quantum computers can break Bitcoin's encryption. The challenge focuses on a simplified version of Bitcoin's cryptographic protocols. <!-- -->
 
 ### The Week Ahead
 
 Some upcoming stories worth watching:
 
-<!-- Links tk -->
+- Meta antitrust trial continues: | *Google Faces Antitrust Scrutiny*: A U.S. district judge has ruled that Google's dominance in ad exchanges and server markets violates the Sherman Antitrust Act. This decision underscores the company's alleged harm to advertisers and consumers. <!-- --> | **Meta Platforms**, the owner of Facebook, Instagram, and WhatsApp, is facing an antitrust trial with the Federal Trade Commission (FTC). The FTC alleges that Meta has monopolized the social media market and should be broken up, with the company's acquisition of Instagram and WhatsApp being a key point of contention. The trial, which is expected to last eight weeks, could shape the future of antitrust enforcement and have significant implications for the tech industry. ([Wall Street Journal](https://www.wsj.com/tech/meta-fights-to-keep-instagram-and-whatsapp-as-antitrust-trial-begins-8c6911d9?st=CzM5F5&reflink=desktopwebshare_permalink)) **Google Faces Antitrust Ruling**: A U.S. district judge ruled that Google's dominance in ad exchanges and server markets violates the Sherman Antitrust Act, harming advertisers and consumers. The company plans to appeal the decision. The ruling is part of a larger trend of antitrust cases against major tech companies, including Facebook and Amazon. ([Wall Street Journal](https://www.wsj.com/business/media/judge-rules-google-operates-illegal-ad-monopoly-1d955ed4?st=toZKpR&reflink=desktopwebshare_permalink))
 
-### Community
+- Tariffs and Martial Law Concerns:** President Donald Trump is approaching a deadline to report on whether to invoke the Insurrection Act and declare martial law. Trump has taken actions to subvert the military to meet this end, including installing a combative defense secretary and replacing the Joint Chiefs of Staff chairman. The article explores a hypothetical scenario where Trump declares martial law, leading to a chain of events that could result in the military arresting the president and suspending civil government. ([San Francisco Chronicle](https://www.sfchronicle.com/opinion/openforum/article/trump-insurrection-act-april-20-20269810.php)) | EU may be using Big Tech antitrust as a bargaining chip on tariffs. https://www.wsj.com/tech/eu-meta-apple-punishment-delay-0453d7a0?st=k6w5qz&reflink=desktopwebshare_permalink
 
-- **A big thank-you to the paid subscribers** who help the w3w newsletter bring readers the latest news about Bitcoin, Ethereum, AI, and other emerging tech. I'm glad to maintain a free distribution tier as well, to make this information available more widely. But if you're able, please do consider upgrading to a paid plan [on Substack](https://w3wnews.substack.com/subscribe). 😊
+- **The governments of China and America are taking opposite approaches regarding their own crypto portfolios.** China's Local Governments Sell Seized Crypto Amid Trading Ban** Despite a ban on cryptocurrency trading in mainland China, local governments have been selling confiscated crypto assets to replenish public coffers. This practice, which involves private companies helping to dispose of seized assets, has raised concerns about opaque processes and potential corruption. According to Reuters, one company has facilitated the sale of over 3 billion yuan worth of cryptocurrencies in offshore markets since 2018. ([The Block](https://www.theblock.co/post/350955/china-government-selling-seized-crypto)) **US Government's Crypto Holdings** The Trump administration is exploring ways to increase the US government's Bitcoin holdings, including using funds from revalued gold certificates and import tariffs. According to Bo Hines, Executive Director of the President's Council of Advisers on Digital Assets, the administration aims to maximize every legal and fiscal lever to expand the country's crypto holdings. This move could be supported by the reintroduced Bitcoin Act of 2025. ([Cryptopolitan](https://www.msn.com/en-us/politics/government/trump-to-use-tariff-revenue-to-buy-more-bitcoin/ar-AA1CWdHZ)) **Trump Family's Crypto Ventures** The Trump family has invested in various crypto projects, including nonfungible tokens, decentralized finance, memecoins, ETFs, stablecoins, and Bitcoin mining. These ventures have generated significant paper gains, approaching $1 billion, despite market fluctuations. The family's involvement in crypto has raised concerns about potential conflicts of interest given the administration's influence over regulations. ([Bloomberg](https://finance.yahoo.com/news/trump-family-going-crypto-projects-140000972.html))
+
+- De-dollarization? <!-- Find JPM remark on it being plausible. --> Coinbase analysts warn of a potential "crypto winter" due to the ongoing trade war and decreased investor confidence. Bitcoin's price is currently above its 200-day moving average, but has shown volatility in recent weeks. ([Decrypt](https://decrypt.co/315089/bitcoin-steadies-but-coinbase-analyst-sees-crypto-winter-tariffs))
+
+- **Stablecoin Market Growth Predicted** A research report by Standard Chartered predicts that the stablecoin market could grow to $2 trillion by the end of 2028, driven by the expected passage of the Genius Act in the U.S. This legislation would further legitimize the stablecoin industry, potentially leading to a 10-fold increase in stablecoin supply. The increased demand for dollar-denominated stablecoin reserves could support U.S. dollar hegemony. ([CoinDesk](https://www.coindesk.com/markets/2025/04/15/stablecoin-market-could-grow-to-usd2t-by-end-2028-standard-chartered))
+
+- **DOJ Signals Shift in Crypto Enforcement**: A recent U.S. Justice Department memo indicates a shift away from aggressive crypto enforcement under the Biden administration. The memo suggests a more measured approach moving forward. <!-- -->
+
+<hr>
+
+ **A big thank-you to the paid subscribers** who help the w3w newsletter bring readers the latest news about Bitcoin, Ethereum, AI, and other emerging tech. I'm glad to maintain a free distribution tier as well, to make this information available more widely. But if you're able, please do consider upgrading to a paid plan [on Substack](https://w3wnews.substack.com/subscribe). 😊
+
+<hr>
 
 ### Odds & Ends
+
+- **Elon Musk's Expanding Family Plans**: Elon Musk, already a father to at least 14 children from four women, is reportedly seeking additional mothers to grow his family. Sources claim this aligns with his belief in the importance of population growth. | **Elon Musk's Reproductive Plans** Elon Musk has a large family, with at least 14 children from four women, and is reportedly seeking to recruit more mothers to have his children. According to sources, Musk uses nondisclosure clauses and financial incentives to maintain secrecy and control over the mothers and their children. His motivations for having many children include concerns about a declining population and a desire to create a "legion" of intelligent humans to ensure the survival of humanity. ([Wall Street Journal](https://www.wsj.com/politics/elon-musk-children-mothers-ashley-st-clair-grimes-dc7ba05c?st=QFR3UL&reflink=desktopwebshare_permalink))
 
 - **Scientists have captured the first confirmed images** of an elusive species of deep-sea squid in its natural habitat. They used a remote vehicle to photograph the animal swimming 600 meters deep (1,968 feet) in the South Atlantic. ([CNN](https://www.cnn.com/2025/04/16/science/colossal-squid-footage/index.html))
 
